# cpp-xsd

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  datatypes.xsd
docs/: CMakeLists.txt
include/tnt/xsd/: any_simple_type.hpp  base64_binary.hpp  boolean.hpp  byte.hpp  decimal.hpp  double.hpp  entities.hpp  entity.hpp  float.hpp  hex_binary.hpp  id.hpp  idref.hpp  idrefs.hpp  int.hpp  integer.hpp  language.hpp  long.hpp  name.hpp  ncname.hpp  negative_integer.hpp  nmtoken.hpp  nmtokens.hpp  non_negative_integer.hpp  non_positive_integer.hpp  normalized_string.hpp  positive_integer.hpp  short.hpp  string.hpp  token.hpp  unsigned_byte.hpp  unsigned_int.hpp  unsigned_long.hpp  unsigned_short.hpp  xs_any_simple_type.hpp  xs_base64_binary.hpp  xs_boolean.hpp  xs_byte.hpp  xs_decimal.hpp  xs_double.hpp  xs_entities.hpp  (+26 more)
src/: CMakeLists.txt  any_simple_type.cpp  decimal.cpp  double.cpp  normalized_string.cpp  string.cpp  token.cpp  xml.cpp  xml.hpp  xml_regex.cpp  xml_regex.hpp  xml_string.cpp  xml_string.hpp  xs_any_simple_type.cpp  xs_base64_binary.cpp  xs_boolean.cpp  xs_byte.cpp  xs_decimal.cpp  xs_double.cpp  xs_entities.cpp  xs_entity.cpp  xs_float.cpp  xs_hex_binary.cpp  xs_id.cpp  xs_idref.cpp  xs_idrefs.cpp  xs_int.cpp  xs_integer.cpp  xs_language.cpp  xs_long.cpp  xs_name.cpp  xs_ncname.cpp  xs_negative_integer.cpp  xs_nmtoken.cpp  xs_nmtokens.cpp  xs_non_negative_integer.cpp  xs_non_positive_integer.cpp  xs_normalized_string.cpp  xs_positive_integer.cpp  xs_short.cpp  (+7 more)
test/: CMakeLists.txt  base64_binary.cpp  boolean.cpp  byte.cpp  decimal.cpp  double.cpp  entities.cpp  entity.cpp  float.cpp  hex_binary.cpp  id.cpp  idref.cpp  idrefs.cpp  int.cpp  integer.cpp  language.cpp  long.cpp  name.cpp  ncname.cpp  negative_integer.cpp  nmtoken.cpp  nmtokens.cpp  non_negative_integer.cpp  non_positive_integer.cpp  normalized_string.cpp  positive_integer.cpp  short.cpp  string.cpp  token.cpp  unsigned_byte.cpp  unsigned_int.cpp  unsigned_long.cpp  unsigned_short.cpp  xs_base64_binary.cpp  xs_boolean.cpp  xs_byte.cpp  xs_decimal.cpp  xs_double.cpp  xs_entities.cpp  xs_entity.cpp  (+25 more)
